@@ -1,3 +1,10 @@
+2007-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-create-image): Parse image data if it failed in
+	identifying type.
+
+	* w3m-xmas.el (w3m-create-image): Ditto.
+
 2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-resize-inline-image-internal): Validate image url.
